--- a/PrevencionDroogasEc/app/src/main/res/layout/chat_roomseted.xml
+++ b/PrevencionDroogasEc/app/src/main/res/layout/chat_roomseted.xml
@@ -29,7 +29,7 @@
             android:layout_marginTop="5dp" />
 
         <TextView
-            android:text="Chat en Linea SETED"
+            android:text="Chat Privado SETED"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textView17"
