--- a/PrevencionDroogasEc/app/src/main/res/layout/fragmento_chat.xml
+++ b/PrevencionDroogasEc/app/src/main/res/layout/fragmento_chat.xml
@@ -70,7 +70,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="text"
-                            android:text=""
+                            android:hint="Escribe otro tema..."
                             android:textSize="14dp"
                             android:ems="21"
                             android:id="@+id/descrip"/>
