--- a/PrevencionDroogasEc/app/src/main/res/layout/actividad_infor10.xml
+++ b/PrevencionDroogasEc/app/src/main/res/layout/actividad_infor10.xml
@@ -30,7 +30,7 @@ android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingBottom="10dip"
             android:paddingLeft="15dip"
             android:textColor="#000"
-            android:background="#edd602"/>
+            android:background="#eab600"/>
     </LinearLayout>
 
     <ScrollView
