--- a/PrevencionDroogasEc/app/src/main/res/layout/actividad_informacion6.xml
+++ b/PrevencionDroogasEc/app/src/main/res/layout/actividad_informacion6.xml
@@ -30,7 +30,7 @@
             android:paddingBottom="10dip"
             android:paddingLeft="15dip"
             android:textColor="#000"
-            android:background="#edd602"/>
+            android:background="#eab600"/>
     </LinearLayout>
 
     <ScrollView
