--- a/PrevencionDroogasEc/app/src/main/res/layout/activity_signup.xml
+++ b/PrevencionDroogasEc/app/src/main/res/layout/activity_signup.xml
@@ -14,7 +14,7 @@
     <TableRow
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="#0000FF"
+        android:background="@color/primaryColor"
         android:padding="5dp"
         android:id="@+id/tableRow">
 
@@ -27,7 +27,7 @@
             android:scaleType="fitCenter"
             android:src="@drawable/btnhome"
             android:adjustViewBounds="true"
-            android:background="#0000FF"
+            android:background="@color/primaryColor"
             android:layout_marginTop="5dp" />
 
         <TextView
@@ -71,7 +71,7 @@
                 android:maxLines="1"
                 android:singleLine="true"
                 android:textColor="#1C1C1C"
-                android:textColorHint="#0000FF"/>
+                android:textColorHint="@color/primaryColor"/>
 
         </android.support.design.widget.TextInputLayout>
 
@@ -101,7 +101,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:background="#0000FF"
+            android:background="@color/primaryColor"
             android:text="@string/action_sign_in_short"
             android:textColor="@android:color/white"
             android:textStyle="bold"
