--- a/PrevencionDroogasEc/app/src/main/res/layout/chat_room.xml
+++ b/PrevencionDroogasEc/app/src/main/res/layout/chat_room.xml
@@ -12,7 +12,7 @@
     <TableRow
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="#0000FF"
+        android:background="@color/primaryColor"
         android:padding="5dp"
         android:id="@+id/tableRow">
 
@@ -25,7 +25,7 @@
             android:scaleType="fitCenter"
             android:src="@drawable/btnback"
             android:adjustViewBounds="true"
-            android:background="#0000FF"
+            android:background="@color/primaryColor"
             android:layout_marginTop="5dp" />
 
         <TextView
@@ -54,27 +54,32 @@
             android:textColor="#000"
             android:textSize="16dp"/>
     </ScrollView>
-    <TableRow
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
-        <Button
-            android:text="Enviar"
-            android:drawableRight="@drawable/ico_enviar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnsend"
-            android:textSize="20dp"/>
+        android:layout_height="wrap_content">
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Escribe Aqui..."
             android:textColor="#000"
-            android:id="@+id/txtChat"/>
+            android:id="@+id/txtChat"
+            android:layout_alignParentBottom="true"
+            android:layout_above="@+id/btnsend"
+            android:layout_toStartOf="@+id/btnsend" />
 
-    </TableRow>
+        <ImageButton
+            android:id="@+id/btnsend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="1dip"
+            android:src="@drawable/ico_send"
+            android:background="#fff"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"/>
+    </RelativeLayout>
 
 
 </RelativeLayout>
