--- a/PrevencionDroogasEc/app/src/main/res/values/colors.xml
+++ b/PrevencionDroogasEc/app/src/main/res/values/colors.xml
@@ -3,30 +3,12 @@
     <color name="window_background">#ffffff</color>
 
     <color name="primaryDarkColor">#1C1C1C</color>
-    <color name="primaryColor">#0000FF</color>
-    <color name="accentColor">#ff000d</color>
+    <color name="primaryColor">#0555a2</color>
+    <color name="accentColor">#e53429</color>
 
     <color name="background_footer_item_grid_categorias">#90000000</color>
 
     <color name="color_light">#ffffff</color>
 
     <color name="background_header_seccion_inicio">#1C1C1C</color>
-
-    <color name="colorPrimary">#00bcd4</color>
-    <color name="colorPrimaryDark">#0097a7</color>
-    <color name="colorAccent">#f2fe71</color>
-
-    <color name="bg_login">#26ae90</color>
-    <color name="bg_register">#2e3237</color>
-    <color name="bg_main">#428bca</color>
-    <color name="white">#ffffff</color>
-    <color name="input_login">#222222</color>
-    <color name="input_login_hint">#999999</color>
-    <color name="input_register">#888888</color>
-    <color name="input_register_bg">#3b4148</color>
-    <color name="input_register_hint">#5e6266</color>
-    <color name="btn_login">#26ae90</color>
-    <color name="btn_login_bg">#eceef1</color>
-    <color name="lbl_name">#333333</color>
-    <color name="btn_logut_bg">#ff6861</color>
 </resources>
