--- a/PrevencionDroogasEc/app/src/main/res/layout/chat_room.xml
+++ b/PrevencionDroogasEc/app/src/main/res/layout/chat_room.xml
@@ -7,7 +7,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <TableRow
         android:layout_width="fill_parent"
