--- a/PrevencionDroogasEc/app/src/main/res/layout/fragmento_categorias.xml
+++ b/PrevencionDroogasEc/app/src/main/res/layout/fragmento_categorias.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <RelativeLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -26,7 +26,8 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/textView6"
                     android:textSize="22dip"
-                    android:textColor="#000"/>
+                    android:textColor="#000"
+                    android:textAlignment="center"/>
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="2dp"
@@ -35,45 +36,28 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="20dp"/>
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
-
                     <TextView
                         android:text="Seleccion Centro de Salud\npor Provincia:"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/textView2"
                         android:textSize="18dip"
-                        android:textColor="#000"/>
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingTop="20dip">
+                        android:textColor="#000"
+                        android:textAlignment="center"/>
 
                     <Spinner
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/spinner_animales"/>
-                </TableRow>
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingTop="20dip">
+                        android:id="@+id/spinner_animales"
+                        android:layout_marginTop="20dp"/>
 
                     <Button
                         android:text="Seleccionar Provincia"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/btnBuscarProv"
-                        android:onClick="Buscar" />
-                </TableRow>
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingTop="25dip">
+                        android:onClick="Buscar"
+                        android:layout_marginTop="20dp"/>
 
                     <TextView
                         android:text="Seleccion Canton cercano:"
@@ -81,32 +65,24 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/textView3"
                         android:textSize="18dip"
-                        android:textColor="#000"/>
-                </TableRow>
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingTop="20dip">
+                        android:textColor="#000"
+                        android:layout_marginTop="20dp"/>
 
                     <Spinner
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/spinnerCant"/>
-                </TableRow>
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingTop="20dip">
+                        android:id="@+id/spinnerCant"
+                        android:layout_marginTop="20dp"/>
 
                     <Button
                         android:text="Seleccionar canton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/btnBuscarCant"
-                        android:onClick="Buscar" />
-                </TableRow>
+                        android:onClick="Buscar"
+                        android:layout_marginTop="20dp"/>
             </TableLayout>
-        </LinearLayout>
+        </RelativeLayout>
     </ScrollView>
 
 </FrameLayout>
