--- a/PrevencionDroogasEc/app/src/main/res/layout/fragmento_inicio.xml
+++ b/PrevencionDroogasEc/app/src/main/res/layout/fragmento_inicio.xml
@@ -8,33 +8,19 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="match_parent">
-        <TableLayout
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent">
-            <TableRow
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center">
-
-                <ImageButton
-                    android:id="@+id/btnRecarg"
-                    android:layout_width="60dp"
-                    android:layout_height="30dp"
-                    android:adjustViewBounds="true"
-                    android:padding="3dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/ico_recarg"
-                    android:layout_marginLeft="10dip"
-                    android:layout_marginRight="10dip"
-                    android:background="@drawable/borde"
-                    android:onClick="btn1"/>
-            </TableRow>
             <WebView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/vistaWeb"
                 android:layout_margin="10dp"/>
-        </TableLayout>
     </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:visibility="gone"
+        android:progressDrawable="@drawable/progress_bar"/>
 </RelativeLayout>
