--- a/PrevencionDroogasEc/app/src/main/res/layout/fragmento_videos.xml
+++ b/PrevencionDroogasEc/app/src/main/res/layout/fragmento_videos.xml
@@ -22,6 +22,44 @@
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/bordevid"
                 android:layout_marginTop="5dp"
+                android:id="@+id/btnVd5">
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:paddingLeft="5dp"
+                        android:layout_width="180dp"
+                        android:layout_height="80dp"
+                        android:layout_weight="0.2"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/tu_valels"/>
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="fill_parent"
+                        android:layout_centerHorizontal="true"
+                        android:layout_weight="1">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="TU VALES MAS"
+                            android:textSize="12dp"
+                            android:textColor="#000"
+                            android:textStyle="bold"
+                            android:id="@+id/textView5"
+                            android:layout_marginTop="25dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginRight="5dp"
+                            android:gravity="center"/>
+                    </LinearLayout>
+                </TableRow>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/bordevid"
+                android:layout_marginTop="5dp"
                 android:id="@+id/btnVd">
                 <TableRow
                     android:layout_width="match_parent"
@@ -171,6 +209,121 @@
                             android:textColor="#000"
                             android:textStyle="bold"
                             android:id="@+id/textView4"
+                            android:layout_marginTop="25dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginRight="5dp"
+                            android:gravity="center"/>
+                    </LinearLayout>
+                </TableRow>
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/bordevid"
+                android:layout_marginTop="5dp"
+                android:id="@+id/btnVd6">
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:paddingLeft="5dp"
+                        android:layout_width="180dp"
+                        android:layout_height="80dp"
+                        android:layout_weight="0.2"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/queseted1"/>
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="fill_parent"
+                        android:layout_centerHorizontal="true"
+                        android:layout_weight="1">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Capacitación empresas en el ámbito laboral"
+                            android:textSize="12dp"
+                            android:textColor="#000"
+                            android:textStyle="bold"
+                            android:id="@+id/textView6"
+                            android:layout_marginTop="25dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginRight="5dp"
+                            android:gravity="center"/>
+                    </LinearLayout>
+                </TableRow>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/bordevid"
+                android:layout_marginTop="5dp"
+                android:id="@+id/btnVd7">
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:paddingLeft="5dp"
+                        android:layout_width="180dp"
+                        android:layout_height="80dp"
+                        android:layout_weight="0.2"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/como_manupula"/>
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="fill_parent"
+                        android:layout_centerHorizontal="true"
+                        android:layout_weight="1">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="¿Cómo el Alcohol te manipula"
+                            android:textSize="12dp"
+                            android:textColor="#000"
+                            android:textStyle="bold"
+                            android:id="@+id/textView7"
+                            android:layout_marginTop="25dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginRight="5dp"
+                            android:gravity="center"/>
+                    </LinearLayout>
+                </TableRow>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/bordevid"
+                android:layout_marginTop="5dp"
+                android:id="@+id/btnVd8">
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:paddingLeft="5dp"
+                        android:layout_width="180dp"
+                        android:layout_height="80dp"
+                        android:layout_weight="0.2"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/como_afecta"/>
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="fill_parent"
+                        android:layout_centerHorizontal="true"
+                        android:layout_weight="1">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="¿Cómo tu cuerpo absorbe el alcohol y cómo lo elimina?"
+                            android:textSize="12dp"
+                            android:textColor="#000"
+                            android:textStyle="bold"
+                            android:id="@+id/textView8"
                             android:layout_marginTop="25dp"
                             android:layout_marginLeft="5dp"
                             android:layout_marginRight="5dp"
